# fbgroupsearch

./: .env  Cargo.toml  configuration.yaml
migrations/: 20240403081923_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: login.rs  mod.rs
tests/: fb_check.rs  health_check.rs
